# embedding

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh  faiss-cmd.cpp  normalize.sh
blob_storage/: README.md  catFromBlobStorage.sh  downloadDedupedEnFiles.sh  uploadToBlobStorage.sh
embed_index/: build_index.py  load_build_search_example.py  seach_one_lang_index.py
faiss-demo/: faiss-cmd.cpp
index/: CMakeLists.txt  read_t7.py
index/src/: CMakeLists.txt  build_index.cpp  query_index.cpp
models/: README.md  script.py
preprocess/: post.sh  prep.sh
preprocess/bpe/: UNv1.0.6way.ar.apos.tok.lc.codes20k  UNv1.0.6way.en.apos.tok.lc.codes20k  UNv1.0.6way.es.apos.tok.lc.codes20k  UNv1.0.6way.fr.apos.tok.lc.codes20k  UNv1.0.6way.ru.apos.tok.lc.codes20k  UNv1.0.6way.zh.apos.tok.lc.codes20k
preprocess/scripts/tokenizers/: correct_tok_en.sed  correct_tok_fr.sed
